Imágenes de burndowns y primeras explicaciones en memoria
Imágenes de burndowns. Resumen, abstract, introducción y licencia en memoria.

--- a/docs/latex/bibliografia.bib
+++ b/docs/latex/bibliografia.bib
@@ -5,7 +5,6 @@
 		year      = "1992"
 }
 
-
 @misc{ wiki:latex,
        author = "Wikipedia",
        title = "LaTeX --- Wikipedia{,} La enciclopedia libre",
@@ -13,7 +12,6 @@
        howpublished = {\url{https://es.wikipedia.org/w/index.php?title=LaTeX&oldid=84209252}},
        note = "[Internet; descargado 30-septiembre-2015]"
 }
-
 
 @article{bortolot2005,
   title={Estimating forest biomass using small footprint LiDAR data: An individual tree-based approach that incorporates training data},
@@ -26,3 +24,26 @@
   publisher={Elsevier}
 }
 
+@misc{cnmv-informe,
+  author = "Comisión Nacional del Mercado de Valores",
+  title = {Plan de Educación Financiera 2022-2025},
+  year = {2023},
+  howpublished = {\url{https://www.cnmv.es/docportal/publicaciones/planeducacion/planeducacionfinanciera_22_25es.pdf}},
+  note = {Online; Accedido el 06-Nov-2023},
+}
+
+@misc{cnmv-portal,
+  author = "Comisión Nacional del Mercado de Valores",
+  title = {Página oficial de la Comisión Nacional del Mercado de Valores},
+  year = {2023},
+  howpublished = {\url{https://www.cnmv.es/portal/home.aspx}},
+  note = {Online; Accedido el 06-Nov-2023},
+}
+
+@misc{bde,
+  author = "Banco de España",
+  title = {Página oficial del Banco de España},
+  year = {2023},
+  howpublished = {\url{https://www.bde.es/wbe/es/}},
+  note = {Online; Accedido el 06-Nov-2023},
+}
