--- a/docs/latex/tex/1_Introduccion.tex
+++ b/docs/latex/tex/1_Introduccion.tex
@@ -1,3 +1,91 @@
 \capitulo{1}{Introducción}
 
-Descripción del contenido del trabajo y del estructura de la memoria y del resto de materiales entregados.
+Vivimos en una sociedad en la que diferentes conflictos de interés generan desinformación en los medios de comunicación, lo cual se hace notable a través de la difusión de noticias falsas o deliberadamente incompletas. En los mercados financieros este problema cobra especial relevancia, con la difícilmente demostrable manipulación de precios, la falta de transparencia en determinados productos cotizados y la continua propagación de rumores. 
+
+A lo anterior debemos sumar que, según el Plan de Educación Financiera 2022-2025\citep{cnmv-informe} de la CNMV\citep{cnmv-portal} y del Banco de España\citep{bde}, existe un consenso generalizado sobre la necesidad de mejorar el nivel de cultura financiera, independientemente del país y las circunstancias de los ciudadanos. 
+
+Además, no debemos de olvidar que cada vez vivimos más conectados y que, en los últimos años, hemos cambiado nuestra forma de acceder y gestionar los activos financieros. La constante digitalización ha traído consigo problemas estructurales como la falta de acceso a servicios para personas mayores; pero también ha facilitado la accesibilidad a los datos. Y el análisis de estos datos puede ofrecer una perspectiva razonablemente buena de lo que está ocurriendo en realidad. 
+
+Por lo tanto, son necesarias herramientas digitales que permitan realizar una toma de decisiones informada, que sean transparentes y que generen confianza en el usuario final. Además, necesitamos poder planificar nuestro ahorro e inversión de forma coherente con nuestro nivel de tolerancia al riesgo, tratando de diversificar nuestro capital en base a una información confiable. 
+
+La herramienta propuesta en este trabajo tiene como objetivo recopilar los aspectos técnicos y fundamentales más relevantes de algunas empresas y sus productos cotizados. La información final, en gráficos y tablas, están explicados para que se pueda entender, de forma sencilla, el análisis que se hace sobre un determinado conjunto de datos. Esta herramienta proporciona acceso a la información de una manera diferente a lo que suelen ofrecer sitios web y aplicaciones de bolsa y finanzas, porque aquí podremos entender qué está ocurriendo con la evolución de las cuentas de una empresa y compararlo con sus precios cotizados y rendimientos. Además, se ofrece al usuario la posibilidad de ver los resultados de aplicar algunos modelos y algoritmos de trading, pero siempre desde la perspectiva de inversiones a medio o largo plazo y utilizando datos al cierre de los mercados. 
+
+
+\section{Estructura de la memoria}\label{estructura-de-la-memoria}
+
+La memoria sigue la siguiente estructura:
+
+\begin{itemize}
+\tightlist
+\item
+  \textbf{Introducción:} breve descripción del problema a resolver y la
+  solución propuesta. Estructura de la memoria y listado de materiales
+  adjuntos.
+\item
+  \textbf{Objetivos del proyecto:} exposición de los objetivos que
+  persigue el proyecto.
+\item
+  \textbf{Conceptos teóricos:} breve explicación de los conceptos
+  teóricos clave para la comprensión de la solución propuesta.
+\item
+  \textbf{Técnicas y herramientas:} listado de técnicas metodológicas y
+  herramientas utilizadas para gestión y desarrollo del proyecto.
+\item
+  \textbf{Aspectos relevantes del desarrollo:} exposición de aspectos
+  destacables que tuvieron lugar durante la realización del proyecto.
+\item
+  \textbf{Trabajos relacionados:} estado del arte en las aplicaciones y sitios web de bolsa y finanzas.
+\item
+  \textbf{Conclusiones y líneas de trabajo futuras:} conclusiones
+  obtenidas tras la realización del proyecto y posibilidades de mejora o
+  expansión de la solución aportada.
+\end{itemize}
+
+Junto a la memoria se proporcionan los siguientes anexos:
+
+\begin{itemize}
+\tightlist
+\item
+  \textbf{Plan del proyecto software:} planificación temporal y estudio
+  de viabilidad del proyecto.
+\item
+  \textbf{Especificación de requisitos del software:} se describe la
+  fase de análisis; los objetivos generales, el catálogo de requisitos
+  del sistema y la especificación de requisitos funcionales y no
+  funcionales.
+\item
+  \textbf{Especificación de diseño:} se describe la fase de diseño; el
+  ámbito del software, el diseño de datos, el diseño procedimental y el
+  diseño arquitectónico.
+\item
+  \textbf{Manual del programador:} recoge los aspectos más relevantes
+  relacionados con el código fuente (estructura, compilación,
+  instalación, ejecución, pruebas, etc.).
+\item
+  \textbf{Manual de usuario:} guía de usuario para el correcto manejo de
+  la aplicación.
+\end{itemize}
+
+\section{Materiales adjuntos}\label{materiales-adjuntos}
+
+Los materiales que se adjuntan con la memoria son: 
+
+\begin{itemize}
+\tightlist
+\item
+	\textbf{Aplicación FAT}: Financial Analysis Tool.
+\item	
+	\emph{Dataset} de \textbf{vídeos de prueba}.
+\end{itemize}
+
+Además, los siguientes recursos están accesibles a través de internet:
+
+\begin{itemize}
+\tightlist
+\item
+  \textbf{Página web} del proyecto \citep{FAT:web}.
+\item
+  \textbf{Repositorio} del proyecto \citep{FAT:repo}.
+\end{itemize}
+
+
