--- a/docs/latex/tex/4_Tecnicas_y_herramientas.tex
+++ b/docs/latex/tex/4_Tecnicas_y_herramientas.tex
@@ -1,6 +1,21 @@
 \capitulo{4}{Técnicas y herramientas}
 
-Esta parte de la memoria tiene como objetivo presentar las técnicas metodológicas y las herramientas de desarrollo que se han utilizado para llevar a cabo el proyecto. Si se han estudiado diferentes alternativas de metodologías, herramientas, bibliotecas se puede hacer un resumen de los aspectos más destacados de cada alternativa, incluyendo comparativas entre las distintas opciones y una justificación de las elecciones realizadas. 
-No se pretende que este apartado se convierta en un capítulo de un libro dedicado a cada una de las alternativas, sino comentar los aspectos más destacados de cada opción, con un repaso somero a los fundamentos esenciales y referencias bibliográficas para que el lector pueda ampliar su conocimiento sobre el tema.
+\section{Metodologías}\label{metodologias}
 
+\subsection{Scrum}\label{scrum}
 
+Scrum es un marco de trabajo para el desarrollo de \emph{software} que se
+engloba dentro de las metodologías ágiles. Aplica una estrategia de
+trabajo iterativa e incremental a través de iteraciones (\emph{sprints})
+y revisiones \citep{wiki:scrum}.
+
+\subsection{\emph{Test-Driven Development} (TDD)}\label{test-driven-development-tdd}
+
+Es una práctica de desarrollo de \emph{software} que se basa en la repetición
+de un ciclo corto de desarrollo: transformar requerimientos a test,
+desarrollar el código necesario para pasar los test y posteriormente
+refactorizar el código. Esta práctica obliga a los desarrolladores a
+analizar cuidadosamente las especificaciones antes de empezar a escribir
+código, fomenta la escritura de test, la simplicidad del código y
+aumenta la productividad. Como resultado se obtiene \emph{software} más seguro
+y de mayor calidad \citep{wiki:tdd}
