--- a/docs/latex/bibliografia.bib
+++ b/docs/latex/bibliografia.bib
@@ -13,7 +13,7 @@ At its core, Graham's philosophy emphasizes the importance of investing with a m
     originalyear = {1949}
 }
 
-@online{ online:MarketScreener,
+@misc{ online:MarketScreener,
 	author = {MarketScreener},
 	title = {\emph{Financial information for investors and traders}},
 	year = {2024},
@@ -21,7 +21,7 @@ At its core, Graham's philosophy emphasizes the importance of investing with a m
 	note = {Online; Accedido el 10-Abr-2024}
 }
 
-@online{ online:Investing,
+@misc{ online:Investing,
 	author = {Investing},
 	title = {\emph{Website that provides real-time data, news, analysis and tools for global financial markets}},
 	year = {2024},
@@ -29,7 +29,7 @@ At its core, Graham's philosophy emphasizes the importance of investing with a m
 	note = {Online; Accedido el 10-Abr-2024}
 }
 
-@online{ online:Bloomberg,
+@misc{ online:Bloomberg,
 	author = {Bloomberg},
 	title = {\emph{Global media company that covers business, finance, markets, politics and more}},
 	year = {2024},
@@ -45,7 +45,7 @@ At its core, Graham's philosophy emphasizes the importance of investing with a m
   	note = {Online; Accedido el 06-Nov-2023},
 }
 
-@online{ online:cnmv_portal,
+@misc{ online:cnmv_portal,
   	author = {Comisión Nacional del Mercado de Valores},
   	title = {\emph{Página oficial de la Comisión Nacional del Mercado de Valores}},
   	year = {2023},
@@ -53,7 +53,7 @@ At its core, Graham's philosophy emphasizes the importance of investing with a m
   	note = {Online; Accedido el 06-Nov-2023},
 }
 
-@online{ online:bde,
+@misc{ online:bde,
   	author = {Banco de España},
   	title = {\emph{Página oficial del Banco de España}},
   	year = {2023},
@@ -88,7 +88,7 @@ journal = {Neural Comput.},
 	numpages = {46}
 }
 
-@online{ online:FAT_web,
+@misc{ online:FAT_web,
   	author = {Rodrigo Merino Tovar},
   	title = {\emph{Herramienta web Financial Analysis Tool}},
   	year = {2024},
@@ -96,7 +96,7 @@ journal = {Neural Comput.},
   	note = {Online; Accedido el 10-Abr-2024},
 }
 
-@online{ online:FAT_repo,
+@misc{ online:FAT_repo,
   	author = {Rodrigo Merino Tovar},
   	title = {\emph{Repositorio de GitHub del Trabajo de Fin de Grado Financial Analysis Tool}},
   	year = {2024},
@@ -136,7 +136,7 @@ journal = {Neural Comput.},
 	note = {Online; Accedido el 20-Abr-2024}
 }
 
-@online{ online:django_MVT_1,
+@misc{ online:django_MVT_1,
   	author = {Vinayak Nishant},
   	title = {\emph{Django MVT Architecture: A Fresh Take on Classic MVC}},
   	year = {2020},
@@ -144,7 +144,7 @@ journal = {Neural Comput.},
   	note = {Online; Accedido el 20-Abr-2024},
 }
 
-@online{ online:django_MVT_2,
+@misc{ online:django_MVT_2,
   	author = {Django},
   	title = {\emph{Django documentation}},
   	year = {2023},
@@ -160,7 +160,7 @@ journal = {Neural Comput.},
 	note = {Online; Accedido el 20-Abr-2024}
 }
 
-@online{ online:git,
+@misc{ online:git,
   	author = {Git},
   	title = {\emph{Git}},
   	year = {2024},
@@ -168,7 +168,7 @@ journal = {Neural Comput.},
   	note = {Online; Accedido el 20-Abr-2024},
 }
 
-@online{ online:apache_subversion,
+@misc{ online:apache_subversion,
   	author = {Apache},
   	title = {\emph{Apache Subversion}},
   	year = {2024},
@@ -176,7 +176,7 @@ journal = {Neural Comput.},
   	note = {Online; Accedido el 20-Abr-2024},
 }
 
-@online{ online:mercurial,
+@misc{ online:mercurial,
   	author = {Mercurial community},
   	title = {\emph{Mercurial}},
   	year = {2024},
@@ -184,7 +184,7 @@ journal = {Neural Comput.},
   	note = {Online; Accedido el 20-Abr-2024},
 }
 
-@online{ online:github,
+@misc{ online:github,
   	author = {GitHub},
   	title = {\emph{GitHub}},
   	year = {2024},
@@ -192,7 +192,7 @@ journal = {Neural Comput.},
   	note = {Online; Accedido el 20-Abr-2024},
 }
 
-@online{ online:gitlab,
+@misc{ online:gitlab,
   	author = {GitLab},
   	title = {\emph{GitLab}},
   	year = {2024},
@@ -200,7 +200,7 @@ journal = {Neural Comput.},
   	note = {Online; Accedido el 20-Abr-2024},
 }
 
-@online{ online:gitea,
+@misc{ online:gitea,
   	author = {Gitea},
   	title = {\emph{Gitea}},
   	year = {2024},
@@ -208,7 +208,39 @@ journal = {Neural Comput.},
   	note = {Online; Accedido el 20-Abr-2024},
 }
 
-@online{ online:integrar_teams_github,
+@misc{ online:zube,
+  	author = {Pivit Inc.},
+  	title = {\emph{Zube}},
+  	year = {2024},
+  	howpublished = {\url{https://zube.io/}},
+  	note = {Online; Accedido el 22-Abr-2024},
+}
+
+@misc{ online:zenhub,
+  	author = {ZenHub},
+  	title = {\emph{ZenHub}},
+  	year = {2024},
+  	howpublished = {\url{https://www.zenhub.com/}},
+  	note = {Online; Accedido el 22-Abr-2024},
+}
+
+@misc{ online:trello,
+  	author = {Atlassian},
+  	title = {\emph{Trello}},
+  	year = {2024},
+  	howpublished = {\url{https://trello.com/es}},
+  	note = {Online; Accedido el 22-Abr-2024},
+}
+
+@misc{ online:jira,
+  	author = {Atlassian},
+  	title = {\emph{Jira}},
+  	year = {2024},
+  	howpublished = {\url{https://www.atlassian.com/es/software/jira}},
+  	note = {Online; Accedido el 22-Abr-2024},
+}
+
+@misc{ online:integrar_teams_github,
   	author = {microsoft-teams},
   	title = {\emph{Integrar GitHub con MS Teams}},
   	year = {2023},
@@ -216,10 +248,282 @@ journal = {Neural Comput.},
   	note = {Online; Accedido el 20-Abr-2024},
 }
 
-@online{ online:ms_teams,
+@misc{ online:ms_teams,
   	author = {Microsoft},
   	title = {\emph{MS Teams}},
   	year = {2024},
   	howpublished = {\url{https://www.microsoft.com/es-es/microsoft-teams/group-chat-software}},
   	note = {Online; Accedido el 20-Abr-2024},
+}
+
+@misc{ online:spyder,
+  	author = {Spyder IDE},
+  	title = {\emph{Spyder IDE}},
+  	year = {2024},
+  	howpublished = {\url{https://www.spyder-ide.org/}},
+  	note = {Online; Accedido el 22-Abr-2024},
+}
+
+@misc{ online:vs_code,
+  	author = {Microsoft},
+  	title = {\emph{Visual Studio Code}},
+  	year = {2024},
+  	howpublished = {\url{https://code.visualstudio.com/}},
+  	note = {Online; Accedido el 22-Abr-2024},
+}
+
+@misc{ online:texmaker,
+  	author = {Pascal Brachet},
+  	title = {\emph{Texmaker}},
+  	year = {2024},
+  	howpublished = {\url{https://www.xm1math.net/texmaker/}},
+  	note = {Online; Accedido el 22-Abr-2024},
+}
+
+@misc{ online:texstudio,
+  	author = {Benito van der Zander},
+  	title = {\emph{Texstudio}},
+  	year = {2024},
+  	howpublished = {\url{https://www.texstudio.org/}},
+  	note = {Online; Accedido el 22-Abr-2024},
+}
+
+@misc{ wiki:miktex,
+	author = {Wikipedia},
+	title = {\emph{MiKTeX}},
+	year = {2024},
+	howpublished = {\url{https://es.wikipedia.org/wiki/MiKTeX}},
+	note = {Online; Accedido el 22-Abr-2024}
+}
+
+@misc{ online:sphinx,
+  	author = {Sphinx Authors},
+  	title = {\emph{Sphinx}},
+  	year = {2024},
+  	howpublished = {\url{https://www.sphinx-doc.org/en/master/}},
+  	note = {Online; Accedido el 22-Abr-2024},
+}
+
+@misc{ online:pdoc,
+  	author = {pdoc Developers},
+  	title = {\emph{pdoc}},
+  	year = {2024},
+  	howpublished = {\url{https://pdoc.dev/}},
+  	note = {Online; Accedido el 22-Abr-2024},
+}
+
+@misc{ online:jenkins,
+  	author = {Jenkins},
+  	title = {\emph{Jenkins}},
+  	year = {2024},
+  	howpublished = {\url{https://www.jenkins.io/solutions/python/}},
+  	note = {Online; Accedido el 22-Abr-2024},
+}
+
+@misc{ online:circle_ci,
+  	author = {CircleCI},
+  	title = {\emph{CircleCI}},
+  	year = {2024},
+  	howpublished = {\url{https://circleci.com/docs/language-python/}},
+  	note = {Online; Accedido el 22-Abr-2024},
+}
+
+@misc{ online:github_actions,
+  	author = {GitHub},
+  	title = {\emph{GitHub actions}},
+  	year = {2024},
+  	howpublished = {\url{https://docs.github.com/en/actions}},
+  	note = {Online; Accedido el 22-Abr-2024},
+}
+
+@misc{ online:flake8,
+  	author = {Ian Stapleton Cordasco},
+  	title = {\emph{Flake8}},
+  	year = {2024},
+  	howpublished = {\url{https://flake8.pycqa.org/en/latest/}},
+  	note = {Online; Accedido el 22-Abr-2024},
+}
+
+@misc{ online:pylint,
+  	author = {Logilab, Pylint},
+  	title = {\emph{Pylint}},
+  	year = {2024},
+  	howpublished = {\url{https://www.pylint.org/}},
+  	note = {Online; Accedido el 22-Abr-2024},
+}
+
+@misc{ online:coverage,
+  	author = {Ned Batchelder},
+  	title = {\emph{Coverage}},
+  	year = {2024},
+  	howpublished = {\url{https://coverage.readthedocs.io/en/7.4.4/}},
+  	note = {Online; Accedido el 22-Abr-2024},
+}
+
+@misc{ online:pytest_cov,
+  	author = {pytest-cov contributors},
+  	title = {\emph{Pytest-cov}},
+  	year = {2024},
+  	howpublished = {\url{https://pytest-cov.readthedocs.io/en/latest/readme.html}},
+  	note = {Online; Accedido el 22-Abr-2024},
+}
+
+@misc{ online:django,
+  	author = {Django Software Foundation},
+  	title = {\emph{Django}},
+  	year = {2024},
+  	howpublished = {\url{https://www.djangoproject.com/}},
+  	note = {Online; Accedido el 22-Abr-2024},
+}
+
+@misc{ online:flask,
+  	author = {Pallets},
+  	title = {\emph{Flask}},
+  	year = {2024},
+  	howpublished = {\url{https://flask.palletsprojects.com/en/3.0.x/}},
+  	note = {Online; Accedido el 22-Abr-2024},
+}
+
+@misc{ online:pandas,
+  	author = {Num FOCUS Inc.},
+  	title = {\emph{Pandas}},
+  	year = {2024},
+  	howpublished = {\url{https://pandas.pydata.org/docs/}},
+  	note = {Online; Accedido el 22-Abr-2024},
+}
+
+@misc{ online:plotly,
+  	author = {plotly},
+  	title = {\emph{plotly}},
+  	year = {2024},
+  	howpublished = {\url{https://plotly.com/python/}},
+  	note = {Online; Accedido el 22-Abr-2024},
+}
+
+@misc{ online:matplotlib,
+  	author = {The Matplotlib development team},
+  	title = {\emph{Matplotlib}},
+  	year = {2024},
+  	howpublished = {\url{https://matplotlib.org/}},
+  	note = {Online; Accedido el 22-Abr-2024},
+}
+
+@misc{ online:yfinance,
+  	author = {Ran Aroussi},
+  	title = {\emph{yFinance}},
+  	year = {2024},
+  	howpublished = {\url{https://pypi.org/project/yfinance/}},
+  	note = {Online; Accedido el 22-Abr-2024},
+}
+
+@misc{ online:news_api,
+  	author = {News API},
+  	title = {\emph{News API}},
+  	year = {2024},
+  	howpublished = {\url{https://newsapi.org/docs/client-libraries/python}},
+  	note = {Online; Accedido el 22-Abr-2024},
+}
+
+@misc{ online:feedparser,
+  	author = {Kurt McKee y Mark Pilgrim},
+  	title = {\emph{Feedparser}},
+  	year = {2024},
+  	howpublished = {\url{https://feedparser.readthedocs.io/en/latest/introduction.html}},
+  	note = {Online; Accedido el 22-Abr-2024},
+}
+
+@misc{ online:networkx,
+  	author = {NetworkX developers},
+  	title = {\emph{NetworkX}},
+  	year = {2024},
+  	howpublished = {\url{https://networkx.org/}},
+  	note = {Online; Accedido el 22-Abr-2024},
+}
+
+@misc{ online:statsmodels,
+  	author = {Josef Perktold, Skipper Seabold, Jonathan Taylor y statsmodels-developers},
+  	title = {\emph{statsmodels}},
+  	year = {2024},
+  	howpublished = {\url{https://www.statsmodels.org/stable/index.html}},
+  	note = {Online; Accedido el 22-Abr-2024},
+}
+
+@misc{ online:scikit_learn,
+  	author = {scikit-learn developers},
+  	title = {\emph{scikit-learn}},
+  	year = {2024},
+  	howpublished = {\url{https://scikit-learn.org/stable/index.html}},
+  	note = {Online; Accedido el 22-Abr-2024},
+}
+
+@misc{ online:keras,
+  	author = {François Chollet y desarrolladores de Google},
+  	title = {\emph{Keras}},
+  	year = {2024},
+  	howpublished = {\url{https://keras.io/}},
+  	note = {Online; Accedido el 22-Abr-2024},
+}
+
+@misc{ online:tensorflow,
+  	author = {Google Brain Team},
+  	title = {\emph{TensorFlow}},
+  	year = {2024},
+  	howpublished = {\url{https://www.tensorflow.org/?hl=es}},
+  	note = {Online; Accedido el 22-Abr-2024},
+}
+
+@misc{ wiki:html,
+  	author = {Wikipedia},
+  	title = {\emph{HTML}},
+  	year = {2024},
+  	howpublished = {\url{https://es.wikipedia.org/wiki/HTML}},
+  	note = {Online; Accedido el 22-Abr-2024},
+}
+
+@misc{ wiki:css,
+  	author = {Wikipedia},
+  	title = {\emph{CSS}},
+  	year = {2024},
+  	howpublished = {\url{https://es.wikipedia.org/wiki/CSS}},
+  	note = {Online; Accedido el 22-Abr-2024},
+}
+
+@misc{ online:bootstrap,
+  	author = {Bootstrap},
+  	title = {\emph{Bootstrap}},
+  	year = {2024},
+  	howpublished = {\url{https://getbootstrap.com/docs/5.3/getting-started/introduction/}},
+  	note = {Online; Accedido el 22-Abr-2024},
+}
+
+@misc{ wiki:javascript,
+  	author = {Wikipedia},
+  	title = {\emph{JavaScript}},
+  	year = {2024},
+  	howpublished = {\url{https://es.wikipedia.org/wiki/JavaScript}},
+  	note = {Online; Accedido el 22-Abr-2024},
+}
+
+@misc{ online:dotenv,
+  	author = {Saurabh Kumar y Bertrand Bonnefoy-Claudet},
+  	title = {\emph{python-dotenv}},
+  	year = {2024},
+  	howpublished = {\url{https://pypi.org/project/python-dotenv/}},
+  	note = {Online; Accedido el 22-Abr-2024},
+}
+
+@misc{ online:drawio,
+  	author = {JGraph Ltd.},
+  	title = {\emph{Draw.io}},
+  	year = {2024},
+  	howpublished = {\url{https://www.drawio.com/}},
+  	note = {Online; Accedido el 22-Abr-2024},
+}
+
+@misc{ online:mendeley,
+  	author = {Elsevier},
+  	title = {\emph{Draw.io}},
+  	year = {2024},
+  	howpublished = {\url{https://www.mendeley.com/}},
+  	note = {Online; Accedido el 22-Abr-2024},
 }
