--- a/docs/latex/bibliografia.bib
+++ b/docs/latex/bibliografia.bib
@@ -112,6 +112,14 @@ journal = {Neural Comput.},
 	note = {Online; Accedido el 20-Abr-2024}
 }
 
+@misc{ wiki:waterfall,
+	author = {Wikipedia},
+	title = {\emph{Desarrollo en cascada}},
+	year = {2024},
+	howpublished = {\url{https://es.wikipedia.org/wiki/Desarrollo_en_cascada}},
+	note = {Online; Accedido el 22-Abr-2024}
+}
+
 @misc{ wiki:TDD,
 	author = {Wikipedia},
 	title = {\emph{Desarrollo guiado por pruebas}},
@@ -381,6 +389,22 @@ journal = {Neural Comput.},
   	title = {\emph{Flask}},
   	year = {2024},
   	howpublished = {\url{https://flask.palletsprojects.com/en/3.0.x/}},
+  	note = {Online; Accedido el 22-Abr-2024},
+}
+
+@misc{ online:sqlite,
+  	author = {SQLite},
+  	title = {\emph{SQLite}},
+  	year = {2024},
+  	howpublished = {\url{https://www.sqlite.org/index.html}},
+  	note = {Online; Accedido el 22-Abr-2024},
+}
+
+@misc{ online:postgresql,
+  	author = {The PostgreSQL Global Development Group},
+  	title = {\emph{PostgreSQL}},
+  	year = {2024},
+  	howpublished = {\url{https://www.postgresql.org/}},
   	note = {Online; Accedido el 22-Abr-2024},
 }
 
