--- a/docs/latex/bibliografia.bib
+++ b/docs/latex/bibliografia.bib
@@ -312,6 +312,14 @@ journal = {Neural Comput.},
   	note = {Online; Accedido el 22-Abr-2024},
 }
 
+@misc{ online:readthedocs,
+  	author = {Read the Docs Inc and contributors},
+  	title = {\emph{Read the Docs}},
+  	year = {2024},
+  	howpublished = {\url{https://docs.readthedocs.io/en/stable/}},
+  	note = {Online; Accedido el 22-Abr-2024},
+}
+
 @misc{ online:pdoc,
   	author = {pdoc Developers},
   	title = {\emph{pdoc}},
