--- a/docs/latex/tex/4_Tecnicas_y_herramientas.tex
+++ b/docs/latex/tex/4_Tecnicas_y_herramientas.tex
@@ -146,7 +146,7 @@ La comunicación en tiempo real, con llamadas o vídeo llamadas a través de Tea
 \item
   Herramientas consideradas: Spyder IDE \citep{online:spyder}, Visual Studio Code \citep{online:vs_code}.
 \item
-  Herramientas elegidas: Visual Studio Code. 
+  Herramienta elegida: Visual Studio Code. 
 \end{itemize}
 
 A pesar de que ambos entornos tienen plugins de alta calidad, VS Code ofrece mayor 
@@ -165,7 +165,7 @@ VS Code se ha utilizado en este trabajo para desarrollo de \emph{Django}, como e
 \item
   Herramientas consideradas: Texmaker \citep{online:texmaker} y TeXstudio \citep{online:texstudio}.
 \item
-  Herramientas elegidas: Texmaker. 
+  Herramienta elegida: Texmaker. 
 \end{itemize}
 
 \emph{Texmaker} es un editor de texto gratuito, multiplataforma y que integra diversas
@@ -182,15 +182,17 @@ de \TeX / \LaTeX \emph{MikTex} \citep{wiki:miktex} es menos problemática que co
 \begin{itemize}
 \tightlist
 \item
-  Herramientas consideradas: Sphinx \citep{online:sphinx} y pdoc \citep{online:pdoc}.
+  Herramientas consideradas: Sphinx \citep{online:sphinx}, Read the Docs \citep{online:readthedocs} y pdoc \citep{online:pdoc}.
 \item
-  Herramientas elegidas: Sphinx. 
+  Herramientas elegidas: Sphinx y Read the Docs. 
 \end{itemize}
 
-Sphinx es la herramienta más extendida en la comunidad \emph{Python} para documentar código,
+\emph{Sphinx} es la herramienta más extendida en la comunidad \emph{Python} para documentar código,
 es compatible con varios formatos y estilos de \emph{docstrings} - \emph{PyDoc}, \emph{Google} o \emph{Numpy} entre otros - y, además, puede generar documentación de manera automática a partir de los \emph{docstrings}. 
 
-En este trabajo, se ha escogido el formato de \emph{Numpy} para la documentación de código y el estilo de \emph{Read The Docs} para las plantillas de la documentación HTML. 
+En este trabajo, se ha escogido el formato de \emph{Numpy} para la documentación de código y el estilo de \emph{Read The Docs} para las plantillas de la documentación HTML.
+
+La documentación del código puede ser consultada en \href{https://fat.readthedocs.io/es/latest/index.html}{fat.readthedocs.io} o en \href{https://fat.readthedocs.io/es/latest/}{fat.rtfd.io}
 
 
 \section{Integración y despliegue continuos (CI/CD)}\label{ci_cd}
