Gráfica de Markowitz y frontera eficiente

--- a/docs/latex/tex/3_Conceptos_teoricos.tex
+++ b/docs/latex/tex/3_Conceptos_teoricos.tex
@@ -1,16 +1,41 @@
 \capitulo{3}{Conceptos teóricos}
 
-En aquellos proyectos que necesiten para su comprensión y desarrollo de unos conceptos teóricos de una determinada materia o de un determinado dominio de conocimiento, debe existir un apartado que sintetice dichos conceptos.
+Los conceptos teóricos más destacables de este proyecto residen en el estudio del modelo de Markowitz para la formación de una cartera bien diversificada - así como la correlación entre valores cotizados - y  en el análisis de \emph{forecasting} de series temporales con modelos ARIMA y con redes LSTM. 
 
 Algunos conceptos teóricos de \LaTeX{} \footnote{Créditos a los proyectos de Álvaro López Cantero: Configurador de Presupuestos y Roberto Izquierdo Amo: PLQuiz}.
 
+
 \section{Secciones}
 
-Las secciones se incluyen con el comando section.
+Obtención, preprocesado y almacenamiento de datos
+
+
+\section{Secciones}
+
+Diversificación de una cartera de valores cotizados
 
 \subsection{Subsecciones}
 
-Además de secciones tenemos subsecciones.
+Volatilidad y rendimiento de un único valor
+
+\subsection{Subsecciones}
+
+Volatilidad y rendimiento de una cartera con varios valores
+
+\subsection{Subsecciones}
+
+Modelo de Markowitz
+
+\subsection{Subsecciones}
+
+Simulación de Monte Carlo y sharpe ratio
+
+
+\subsection{Subsecciones}
+
+Estudio de correlación con NetworkX
+
+
 
 \subsubsection{Subsubsecciones}
 
